force-app/main/default/objects/Todo_Tasks__c/Todo_Tasks__c.object-meta.xml
<CustomObject>
    <label>Todo Tasks</label>
    <nameField>
        <label>Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Todo Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>