force-app/main/default/objects/Todo_Tasks__c/fields/Tasks_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Start_Date__c</fullName>
    <label>Tasks Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>