force-app/main/default/objects/Todo_Tasks__c/fields/Tasks_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Start_Time__c</fullName>
    <label>Tasks Start Time</label>
    <type>Time</type>
</CustomField>