force-app/main/default/objects/Todo_Tasks__c/fields/Tasks_Status__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Status__c</fullName>
    <label>Tasks Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To do</fullName>
                <default>true</default>
                <label>To do</label>
            </value>
            <value>
                <fullName>Doing</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>